2008.04.23 Kentaro FUKUCHI <fukuchi@megaui.net>
	* split.c:
	  - Split_identifyMode() now uses isdigit() and isalnum macros.
	* qrinput.c:
	  - Error checks have been improved.
	* qrenc.c, tests/view_qrcode.c:
	  - Return value checks have been added.
	  - Structured-append encode with version 0 now returns error.

2008.04.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.h:
	  - QR_MODE_NUL has been added to QRencodeMode. Basically it is used only
	    by Split_identifyMode().
	* qrinput.[ch], split.c]:
	  - QRinput_identifyMode() has been moved to split.c, changed to static
	    and now needs a hint.
	* split.c:
	  - Auto-splitting has been improved.
	* qrinput.c:
	  - A memory leak has been fixed.
	* configure.ac:
	  - The "--enable-gprof" and "--enable-gcov" options have been added.
	* Makefile.am:
	  - man1_MANS has been moved into the "if BUILD_TOOLS - endif" block.

2008.04.14 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Bumped version to 3.0.0.
	* qrencode.[ch]:
	  - QRcode_encodeInput() has changed the API. Previously it takes a
	    QRinput, version and level, but now it takes only a QRinput, because
		QRinput holds the version and level in it. From 3.0.0, you should set
		them by calling QRinput_setVersion() and
		QRinput_setErrorCorrectionLevel(), or use QRinput_new2() to
		instantiate a QRinput object.

2008.04.14 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrspe.c:
	  - NULL check has been added.
	* split.[ch]:
	  - API changed.
	* qrencode.c:
	  - Arguments (version and level) are now checked in QRcode_encodeMask().
	    Internal functions trust the arguments are valid.
	  - Error checks improved.
	* qrinput.c:
	  - Error checks improved.
	* qrencode.h:
	  - Documentation improvements.

2008.04.13 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c, qrencode_innter.h, tests/view_qrcode.c:
	  - Changed API of QRcode_encodeMask().
	* qrencode.[ch], qrinput.[ch], split.[ch]:
	  - Some functions now set errno appropriately.
